[WinCairo] Compile error due to undefined symbols after r183868 https://bugs.webkit.org/show_bug.cgi?id=144692

Patch by Carlos Garcia Campos  <cgarcia@igalia.com> and Per Arne Vollan <peavo@outlook.com> on 2015-05-06
Reviewed by Alex Christensen.

Speculative build fix. Add dummy PlatformDisplayWin.

* PlatformWinCairo.cmake: Add PlatformDisplay.cpp to compilation.
* platform/graphics/PlatformDisplay.cpp:
(WebCore::PlatformDisplay::createPlatformDisplay):
* platform/graphics/PlatformDisplay.h:
* platform/graphics/win/PlatformDisplayWin.h:
Add stubs to compile.
* WebCore.vcxproj/WebCore.vcxproj
* WebCore.vcxproj/WebCore.vcxproj.filters
Add new files to Windows build.



Canonical link: https://commits.webkit.org/162726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183892 268f45cc-cd09-0410-ab3c-d52691b4dbfc